updated navbar mobile styling, fixed spacing on research tab

--- a/client/src/components/navigation/styles/MobileNavbar.module.css
+++ b/client/src/components/navigation/styles/MobileNavbar.module.css
@@ -3,28 +3,41 @@
 .container {
     position: fixed;
     bottom: 0;
-    height: 4rem;
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     font-size: 46px;
-    background-color: var(--COLOR-DARK);
+    background-color: var(--COLOR-DARKER);
     z-index: 20;
+    padding: 0.3rem;
 }
 
 .link {
-    background-color: var(--COLOR-DARK);
     color: var(--COLOR-LIGHT);
-    text-align: center;
+    transition: 0.2s ease-in-out all;
     align-items: center;
+    font-weight: 600;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    text-align: center;
     width: 100%;
     height: 100%;
 }
+.icon {
+    font-size: 32px;
+}
+.name {
+    position: absolute;
+    font-size: 12px;
+    display: grid;
+    place-items: center;
+    bottom: -3px;
 
+}
 .active {
-    background-color: var(--COLOR-LIGHTER);
-    color: var(--COLOR-DARK);
+    color: var(--COLOR-ALT);
 }
 
 
