--- a/client/src/pages/styles/Research.module.css
+++ b/client/src/pages/styles/Research.module.css
@@ -1,7 +1,7 @@
 .form {
     max-width: 380px;
     margin: 0 auto;
-    padding: 1rem 0;
+    padding: 1rem 3rem;
 }
 .table {
     margin: 0 auto;
